# social-network

./: .gitignore  Dockerfile  README.md  build.sh  compose.yml  deploy.sh  dev.py  pyproject.toml
social-network-front/: index.html
social-network-front/assets/css/: base.css  post.css
social-network-front/assets/js/: app.js  fetcher.js
social-network-front/assets/js/components/: list_posts.js  mini_post_user.js  post.js
src/api/: application.py  authentication.py  configuration.py
src/api/dtos/: users.py
src/api/exceptions/: user.py
src/api/routes/: home.py  post.py  users.py
src/datalayer/models/: base.py  post.py  user.py
src/services/: post.py  user.py
